Stuck on how to make sections collapse correctly

--- a/site/module2-solution/css/stylesheet.css
+++ b/site/module2-solution/css/stylesheet.css
@@ -1,8 +1,13 @@
-/*LAYOUT*/
+	* {
+		box-sizing: border-box;
+	}
+
 	/* Desktop */
 		@media (min-width: 992px) {
 			.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12	{
 				float: left;
+				padding: 10px;
+				margin: 10px
 			}
 			.col-lg-1	{
 				width: 8.33%;
@@ -46,6 +51,8 @@
 		@media (min-width: 768px) and (max-width: 991px) {
 			.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12	{
 				float: left;
+				padding: 10px;
+				margin: 10px
 			}
 			.col-md-1	{
 				width: 8.33%;
@@ -89,6 +96,8 @@
 		@media (max-width: 767px) {
 			.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12	{
 				float: left;
+				padding: 10px;
+				margin: 10px
 			}
 			.col-sm-1	{
 				width: 8.33%;
@@ -129,11 +138,35 @@
 		}
 
 	/* Section title region */
-		section {
+		.heading {
+			margin-top: 20px;
+			margin-bottom: 30px;
+		}
+
+		.section {
 			position: relative;
 		}
 
-		section>div:nth-child(1) {
+		.section>div:nth-child(1) {
 			position: absolute;
-			right: 0px;
+			right: -1px;
+			top: -1px;
+		}
+
+		.section>div:nth-child(2) {
+			margin-top: 30px;
+		}
+
+	/*Borders and colours*/
+		.section {
+			background-color: #CCD1D1;
+			border-style: solid;
+			border-width: 1px;
+			border-color: #000000;
+		}
+
+		.section>div:nth-child(1) {
+			border-style: solid;
+			border-width: 1px;
+			border-color: #000000;
 		}
